edition and typos

--- a/archimedes/sty/artmath.sty
+++ b/archimedes/sty/artmath.sty
@@ -13,11 +13,17 @@
 \providecommand*{\desset}[2]{\mleft\lbrace{{#1}:{#2}}\mright\rbrace}  % descriptive set
 \providecommand*{\elset}[1]{\mleft\lbrace{#1}\mright\rbrace}          % elements of a set
 
+% functions
+%
+\providecommand*{\fdef}[3]{{#1}:{#2}\to{#3}} % function definition
+
 % spaces
 %
 \providecommand*{\eset}[1]{\mathcal{#1}}    % special set
 \providecommand*{\espace}{\eset{E}}         % euclidean space
 \providecommand*{\nespace}[1]{\espace^{#1}} % n dim euclidean space
+\providecommand*{\rspace}{\eset{R}}         % real space
+\providecommand*{\nrspace}[1]{\rspace^{#1}} % n dim euclidean space
 
 % tuples
 %
