--- a/diffgeo/diffgeo.tex
+++ b/diffgeo/diffgeo.tex
@@ -17,8 +17,8 @@
 
 %\maketitle
 
-%\input{./doc/genrel}
-%\input{./doc/tensrep}
+\input{./doc/genrel}
+\input{./doc/tensrep}
 \input{./doc/metric}
 
 \bibliographystyle{aipnum4-1}
