--- a/diffgeo/sty/artstyle.sty
+++ b/diffgeo/sty/artstyle.sty
@@ -18,6 +18,7 @@
 \RequirePackage{tensor}
 \RequirePackage[inline]{showlabels}
 \RequirePackage{siunitx}
+\RequirePackage{subcaption}
 \RequirePackage[dvipsnames,table]{xcolor}
 %
 \RequirePackage{pdfsync}
