--- a/archimedes/doc/archimedes.tex
+++ b/archimedes/doc/archimedes.tex
@@ -4,14 +4,16 @@
 
 % ball
 %
-\providecommand*{\rball}{\radius\sbtxt{ball}}
-\providecommand*{\vball}{\volume\sbtxt{ball}}
+\providecommand*{\ball}{\region B}
+\providecommand*{\rball}{\radius_\ball}
+\providecommand*{\vball}{\volume_\ball}
 
 % cylinder
 %
-\providecommand*{\hcyl}{\height\sbtxt{cyl}}
-\providecommand*{\rcyl}{\radius\sbtxt{cyl}}
-\providecommand*{\vcyl}{\volume\sbtxt{cyl}}
+\providecommand*{\cyl}{\region C}
+\providecommand*{\hcyl}{\height_\cyl}
+\providecommand*{\rcyl}{\radius_\cyl}
+\providecommand*{\vcyl}{\volume_\cyl}
 
 
 \section{Archimedes's principle} % (fold)
@@ -83,7 +85,7 @@ Consider a circular cylinder of height $\phi$ and radius $\rho$ and a ball of ra
   \qquad\qquad
   %
   \begin{subfigure}[t]{0.3\textwidth}
-    \includegraphics[width=\textwidth]{./graph/ball-cyl-front}
+    \includegraphics[width=\textwidth]{./graph/ball-cyl-front-1}
     \caption{Front view}
     \label{fig:ballcylsideview}
   \end{subfigure}
@@ -92,7 +94,7 @@ Consider a circular cylinder of height $\phi$ and radius $\rho$ and a ball of ra
   \label{fig:ballcylfrontsideview}
 \end{figure}
 
-\theme{Notation:} a ball is defined by one parameter: its radius; while a cylinder by two: its radius and height. Then, denote the ball radius by $\rball$, its volume by $\vball$, the cylinder radius by $\rcyl$, its height by $\hcyl$, and its volume by $\vcyl$.
+\theme{Notation:} a ball $\ball$ is defined by one parameter: its radius $\rball$; while a cylinder $\cyl$ by two: its radius $\rcyl$ and height $\hcyl$. Volume, on the other hand, is a function that takes a region and outputs a real number: $\fdef{\volume}{\region M}{\rspace}$, where $\region M\subset\nrspace n$.~\cite[p.111]{apostol:1967}. However, instead of noting the volumes of the ball and the cylinder by $\volume\vat\ball,\volume\vat\cyl$, we prefer the less prosaic $\vball,\vcyl$.
 
 \theme{Express constraints symbolically.} By looking at \cref{fig:ballcylfrontview,fig:ballcylsideview}, circumscription translates to
 %
@@ -217,67 +219,67 @@ which gives a second estimate for the volumetric ratio.
 
 \theme{Method:} \Cref{eq:guesstimate,eq:firstestimate} relied only on the properties of the figures and volumes. We did not measure them -- we did not use heights or radii. For the differential geometry solution, on the other hand, we find the volumetric ratio by measuring the figures. First, we describe the figures with a coordinate system along with its oriented volume form and metric. Then, we transform the volume form into a volume element using the metric (to measure the figure volume in dimensions of $\phdim{L^3}$). Finally, we integrate the volume element over the figure to have its volume.
 
-\theme{Cylinder:} in cylindrical coordinates, a circular cylinder $\region C$ of height $\hcyl$ and radius $\rcyl$ can be described by the set
+\theme{Cylinder:} in cylindrical coordinates, a circular cylinder $\cyl$ of height $\height_\cyl$ and radius $\radius_\cyl$ can be described by the set
 %
 \begin{equation*}
-  \region C = \desset{\tuple{\cxpos,\cypos,\czpos}\in\nespace 3}
-                     {0\leq\cxpos\leq\rcyl,
-                      0\leq\cypos\leq 2\pi,
-                      0\leq\czpos\leq\hcyl
-                     }\,,
+  \cyl = \desset{\tuple{\cxpos,\cypos,\czpos}\in\nespace 3}
+                {0\leq\cxpos\leq\radius_\cyl,
+                 0\leq\cypos\leq 2\pi,
+                 0\leq\czpos\leq\height_\cyl
+                }\,,
 \end{equation*}
 %
 which sets the cylinder's oriented volume form as $d\cxpos\oprod d\cypos\oprod d\czpos$. 
 
-On the other hand, to transform the volume form into a volume element, use the metric for cylindrical coordinates: $\metric\sbtxt{cyl} = \diag\vat{1,\cxpos,1}$ to have
+On the other hand, to transform the volume form into a volume element, use the metric for cylindrical coordinates: $\tmetric\mu\nu = \diag\vat{1,\cxpos,1}$ to have
 %
 \begin{equation*}
-  \sqrt{\det\metric\sbtxt{cyl}}\,d\cxpos\oprod d\cypos\oprod d\czpos \implies
+  \sqrt{\det\tmetric\mu\nu}\,d\cxpos\oprod d\cypos\oprod d\czpos \implies
     \cxpos\,d\cxpos d\cypos d\czpos\,.
 \end{equation*}
 %
 Therefore, the cylinder volume can be calculated by integrating the volume element over the figure as
 %
 \begin{equation*}
-  \vcyl = \int_{\region C}\cxpos\,d\cxpos d\cypos d\czpos
-        = \int_{0}^{\rcyl}\cxpos\,d\cxpos \int_{0}^{2\pi}d\cypos \int_{0}^{\hcyl}d\czpos 
-        = \dfrac 12 \rcyl^2 2\pi \hcyl
-        = \pi\rcyl^2\hcyl\,.
+  \volume_\cyl = \int_{\cyl}\cxpos\,d\cxpos d\cypos d\czpos
+               = \int_{0}^{\radius_\cyl}\cxpos\,d\cxpos \int_{0}^{2\pi}d\cypos \int_{0}^{\height_\cyl}d\czpos 
+               = \dfrac 12 \radius_\cyl^2 2\pi \height_\cyl
+               = \pi\radius_\cyl^2\height_\cyl\,.
 \end{equation*}
 
-\theme{Ball:} in spherical coordinates, a ball $\region B$ of radius $\rball$ can be described by the set
+\theme{Ball:} in spherical coordinates, a ball $\ball$ of radius $\radius_\ball$ can be described by the set
 %
 \begin{equation*}
-  \region B = \desset{\tuple{\sxpos,\sypos,\szpos}\in\nespace 3}
-                     {0\leq\sxpos\leq\rball,
-                      0\leq\sypos\leq 2\pi,
-                      0\leq\szpos\leq \pi
-                     }\,,
+  \ball = \desset{\tuple{\sxpos,\sypos,\szpos}\in\nespace 3}
+                 {0\leq\sxpos\leq\radius_\ball,
+                  0\leq\sypos\leq 2\pi,
+                  0\leq\szpos\leq \pi
+                  }\,,
 \end{equation*}
 %
 which sets the ball's oriented volume form as $d\sxpos\oprod d\sypos\oprod d\szpos$. 
 
-On the other hand, to transform the volume form into a volume element, use the metric for spherical coordinates: $\metric\sbtxt{sph} = \diag\vat{1,\sxpos,\sxpos\sin\sypos}$ to have
+On the other hand, to transform the volume form into a volume element, use the metric for spherical coordinates: $\tmetric\mu\nu = \diag\vat{1,\sxpos,\sxpos\sin\sypos}$ to have
 %
 \begin{equation*}
-  \sqrt{\det\metric\sbtxt{ball}}\,d\sxpos\oprod d\sypos\oprod d\szpos \implies
+  \sqrt{\det\tmetric\mu\nu}\,d\sxpos\oprod d\sypos\oprod d\szpos \implies
     \sxpos^2\sin\sypos\,d\sxpos d\sypos d\szpos\,.
 \end{equation*}
 %
 Therefore, the ball volume can be calculated by integrating the volume element over the figure as
 %
 \begin{equation*}
-  \vball = \int_{\region B}\sxpos^2\sin\sypos\,d\sxpos d\sypos d\szpos\,.
-         = \int_{0}^{\rball}\sxpos^2\,d\sxpos \int_{0}^{2\pi} d\sypos \int_{0}^{\pi}\sin\szpos\,d\szpos 
-         = \dfrac 13\rball^3 2\pi 2
-         = \dfrac 43\pi\rball^3\,.
+  \volume_\ball = \int_{\ball}\sxpos^2\sin\sypos\,d\sxpos d\sypos d\szpos\,.
+                = \int_{0}^{\radius_\ball}\sxpos^2\,d\sxpos \int_{0}^{2\pi} d\sypos \int_{0}^{\pi}\sin\szpos\,d\szpos 
+                = \dfrac 13\radius_\ball^3 2\pi 2
+                = \dfrac 43\pi\radius_\ball^3\,.
 \end{equation*}
 %
 Finally, constrain the volumes, \cref{eq:volumetricratioconstraint}, to have their volumetric ratio as
 %
 \begin{equation}\label{eq:volsbydifferentialgeometry}
-  \dfrac{\vball}{\vcyl} = \dfrac 43\pi\radius^3\,\dfrac{1}{2\pi\radius\radius^2}
-                        = \dfrac 23\,.
+  \dfrac{\volume_\ball}{\volume_\cyl} = \dfrac 43\pi\radius^3\,\dfrac{1}{2\pi\radius\radius^2}
+                                      = \dfrac 23\,.
 \end{equation}
 %
 \theme{Compare with previous work.} The result of applying differential geometry, \cref{eq:volsbydifferentialgeometry}, goes further than those obtained by guessing, \cref{eq:firstestimate}, and by applying dimensional analysis, \cref{eq:secondestimate}, for it gives the \emph{exact} value for the volume ratio: $2/3$. However, the time spent in guessing and in doing DA was not wasted, since their results can be seen as \emph{sanity checks}. These checking systems are useful to \emph{confirm} differential geometry's long calculations.
