--- a/diffgeo/sty/artlingo.sty
+++ b/diffgeo/sty/artlingo.sty
@@ -15,6 +15,8 @@
 \providecommand*{\vicvers}{\lingform{vice versa}}
 \providecommand*{\viz}{\lingform{viz.}}
 %
+\providecommand*{\brand}[1]{\textsc{#1}} % brand
+%
 % quotation marks
 %
 \providecommand*{\scare}[1]{\guillemotleft\,{#1}\,\guillemotright}
