typo, edition, more graphs

--- a/diffgeo/doc/references.bib
+++ b/diffgeo/doc/references.bib
@@ -1,12 +1,21 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Diego Herrera at 2015-07-08 23:04:05 +0200 
+%% Created for Diego Herrera at 2015-07-30 13:12:59 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{cvitanovic:2008,
+	Author = {Cvitanovic, Predrag},
+	Date-Added = {2015-07-30 11:12:15 +0000},
+	Date-Modified = {2015-07-30 11:12:59 +0000},
+	Isbn = {9780691118369},
+	Publisher = {Princeton University Press},
+	Title = {{Group Theory}},
+	Year = {2008}}
 
 @booklet{bertschinger:1999,
 	Author = {Edmund Bertschinger},
