--- a/diffgeo/sty/artmath.sty
+++ b/diffgeo/sty/artmath.sty
@@ -3,7 +3,7 @@
 
 % various
 %
-\providecommand*{\defas}{\colonequals}            % defined as
+\providecommand*{\defas}{\equiv}                  % defined as
 \providecommand*{\parens}[1]{\mleft({#1}\mright)} % parenthesis
 \providecommand*{\vat}[1]{\parens{#1}}            % value of a function at a point
 
@@ -41,6 +41,7 @@
 % operators
 %
 \DeclareMathOperator{\diag}{diag} % diagonal of a matrix
+\DeclareMathOperator{\abs}{abs}   % absolute value
 
 % inverse
 %
