--- a/diffgeo/sty/artstyle.sty
+++ b/diffgeo/sty/artstyle.sty
@@ -11,6 +11,7 @@
 \RequirePackage{colonequals}
 \RequirePackage{epigraph}
 \RequirePackage{graphicx}
+\RequirePackage{listings}
 \RequirePackage[fixamsmath,disallowspaces]{mathtools}
 \RequirePackage{microtype}
 \RequirePackage{mleftright}
@@ -53,6 +54,10 @@
 \refcheckize{\Cref}
 \refcheckizetwo{\crefrange}
 \refcheckizetwo{\Crefrange}
+
+% listings
+%
+\lstset{language=[5.2]Mathematica, basicstyle=\small\ttfamily,breaklines=true}
 
 % fonts
 %
