--- a/diffgeo/diffgeo.tex
+++ b/diffgeo/diffgeo.tex
@@ -8,6 +8,7 @@
 \usepackage{./sty/artlingo}
 \usepackage{./sty/artmath}
 \usepackage{./sty/artphysics}
+\usepackage{./sty/arttikz}
 
 \begin{document}
 
@@ -19,7 +20,7 @@
 
 \input{./doc/genrel}
 \input{./doc/tensrep}
-\input{./doc/metric}
+%\input{./doc/metric}
 
 \bibliographystyle{aipnum4-1}
 \bibliography{./doc/references}
